--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,3 +11,14 @@ spring:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQL9Dialect
     show-sql: false
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: citrusgo54@gmail.com
+    password: uavepzrnsahgzpij
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
